--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".activity.RegisterActivity">
 
     <!--Top-->
     <LinearLayout
@@ -22,7 +22,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@mipmap/log"
+            android:background="@mipmap/register_back"
             android:gravity="center_vertical">
         </Button>
 
@@ -60,7 +60,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_username"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_username"
@@ -92,7 +92,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_password"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_password"
@@ -123,7 +123,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_password"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_againpassword"
@@ -154,7 +154,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_personname"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_personname"
@@ -171,7 +171,7 @@
                 app:met_singleLineEllipsis="true"></com.rengwuxian.materialedittext.MaterialEditText>
         </LinearLayout>
 
-        <!--AgainPassword-->
+        <!--IDCard-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -185,7 +185,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_idcard"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_IDcard"
@@ -225,7 +225,7 @@
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="15dp"
-                    android:background="@mipmap/log"></ImageView>
+                    android:background="@mipmap/register_sex"></ImageView>
                 <!--male-->
                 <RadioButton
                     android:id="@+id/rd_sex_male"
@@ -234,6 +234,7 @@
                     android:layout_marginRight="15dp"
                     android:checked="true"
                     android:text="男"
+                    android:textColor="@color/black"
                     android:textSize="15sp"></RadioButton>
                 <!--female-->
                 <RadioButton
@@ -241,6 +242,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="女"
+                    android:textColor="@color/black"
                     android:textSize="15sp"></RadioButton>
             </RadioGroup>
         </LinearLayout>
@@ -259,7 +261,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
-                android:background="@mipmap/log"></ImageView>
+                android:background="@mipmap/register_telphone"></ImageView>
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/register_usertelphone"
