--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,49 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".activity.LoginActivity">
 
-    <!--Top-->
-        <LinearLayout
-        android:id="@+id/login_icon"
+    <!--图标-->
+    <LinearLayout
+        android:id="@+id/linear_Top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="180dp"
-        android:orientation="horizontal">
-            <ImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/study_online">
-            </ImageView>
-            <TextView
-                android:layout_marginLeft="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Study Online"
-                android:textColor="#3399FF"
-                android:textStyle="bold"
-                android:textSize="42sp">
-            </TextView>
-        </LinearLayout>
+        android:layout_marginTop="100dp"
+        android:gravity="center_horizontal">
+        <!--图标-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@mipmap/log">
+        </ImageView>
+        <!--文字-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:letterSpacing="0.15"
+            android:text="Study Online"
+            android:textColor="#3399FF"
+            android:textSize="21sp"
+            android:textStyle="bold">
+        </TextView>
+    </LinearLayout>
 
-    <!--Center-->
+    <!--ED框-->
+    <!--Username-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        <!--用户名-->
+        android:layout_below="@id/linear_Top"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
-        <!--密码-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal">
+            <!--Icon-->
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:background="@mipmap/log">
+            </ImageView>
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/login_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="用户名"
+                android:textCursorDrawable="@color/black"
+                android:textSize="15sp"
+                app:met_baseColor="@color/black"
+                app:met_floatingLabel="highlight"
+                app:met_helperText="请输入用户名"
+                app:met_maxCharacters="17"
+                app:met_primaryColor="@color/black"
+                app:met_singleLineEllipsis="true">
+            </com.rengwuxian.materialedittext.MaterialEditText>
+        </LinearLayout>
+
+        <!--Password-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal">
+            <!--Icon-->
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="15dp"
+                android:background="@mipmap/log">
+            </ImageView>
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="密码"
+                android:textCursorDrawable="@color/black"
+                android:textSize="15sp"
+                app:met_baseColor="@color/black"
+                app:met_floatingLabel="highlight"
+                app:met_helperText="请输入密码"
+                app:met_maxCharacters="17"
+                app:met_primaryColor="@color/black"
+                app:met_singleLineEllipsis="true">
+            </com.rengwuxian.materialedittext.MaterialEditText>
+        </LinearLayout>
+
+        <!--记住密码 自动登录-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/login_cbremPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住密码"
+                android:textSize="15sp"
+                android:letterSpacing="0.1">
+            </CheckBox>
+            <CheckBox
+                android:id="@+id/login_cbautoLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="自动登录"
+                android:textSize="15sp"
+                android:letterSpacing="0.1">
+            </CheckBox>
+        </LinearLayout>
+
+        <!--登录按钮-->
+        <ImageButton
+            android:id="@+id/login_btnlogin"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="30dp"
+            android:background="@mipmap/log"
+            android:layout_gravity="center_horizontal">
+        </ImageButton>
+
+        <!--底部-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="170dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <TextView
+                android:id="@+id/login_forgetpassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="忘记密码?"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:letterSpacing="0.15">
+            </TextView>
+            <TextView
+                android:id="@+id/login_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="新用户注册"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:letterSpacing="0.15">
+            </TextView>
+        </LinearLayout>
     </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
